0.65 from 0.64:
        - Now exits with the proper exit code when a subcommand fails (see
          ticket #58).
        - Argument parsing now fails properly with invalid arguments before the
          command.
        - Now always fflush's before doing a system() call, to improve output.
        - Rearranged build order to be a bit more explicit.
        - Added the new technical README.
        - Improved the process of making universal binaries for OS X.
        - Rebuild: Added -notfound, which lists imports which correspond with
          non-existing files.
        - DSSS should now only install dependencies which are not handled (even
          if they're handled externally to DSSS).
        - Rebuild: Moved document generation back into rebuild.
        - Rebuild: Support for pragma(nolink) (see ticket #57).
        - Future versions should be upgradeable with `dsss net install dsss`
          (see ticket #26).
        - Rebuild: Made rebuild choose a D compiler at runtime when possible.
        - The 'sss' package now installs as a sourcelibrary, so it should be
          compilable during X-compilation, etc.
        - Rebuild: Fixed import timestamping.

0.64 from 0.63:
        - Rebuild: Added "rerun" mode, which acts like a more robust rdmd (see
          ticket #28).
        - Rebuild: <prefix>/include/d is always included automatically in the
          import path, so that rebuild can be used more easily in isolation
          with DSSS-installed software.
        - Added `dsss net depslist` command.
        - Made `dsss uninstall` explicitly require an argument.
        - Rebuild: Fixed -K flag (see ticket #56).
        - Rebuild: Made --prefix=<absolute path> work properly on Windows when
          backslashes are used (see ticket #53).

0.63 from 0.62:
        - Made OS X -arch, -isysroot and -framework flags work with dsss as
          well as rebuild (see ticket #27).
        - Improved documentation.
        - Merged DMD 1.013.