@@ -1,3 +1,9 @@
+SVN from 0.65:
+        - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
+          ticket #66).
+        - Some dsss-net-installs which failed due to the above bug should
+          now work (see ticket #66).
+
 0.65 from 0.64:
         - Now exits with the proper exit code when a subcommand fails (see
           ticket #58).
